--- a/src/scss/modules/_results.scss
+++ b/src/scss/modules/_results.scss
@@ -18,3 +18,22 @@
 .info-dark {
   color: $gray-dark;
 }
+
+.result-item {
+  border: 1px solid $gray-lighter;
+  border-left: 5px solid $gray-lighter;
+  color: $gray-dark;
+  padding: $padding-base-vertical $padding-base-horizontal;
+  padding-left: 15px;
+  margin-bottom: $padding-large-vertical;
+
+  &:hover {
+    transform: translate(0, -3px);
+    transition: 0.15s;
+    box-shadow: 3px 3px 3px rgba($gray, 0.2);
+  }
+
+  h2 {
+    font-size: 1.3em;
+  }
+}
